--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,11 @@
     <link rel="stylesheet" href="css/normalizer.css">
     <title>API Random User Generator</title>
 </head>
-<body class="sidesPadd">
+<body class="body-class">
     <header>
         <h1 class="main-title">Awesome Startup Employee Directory</h1>
     </header>
-    <main>
-        <div>
-            <p>Holis</p>
-        </div>
+    <main class="main-grid">
     </main>
     <script src="js/app.js"></script>
 </body>
