searchbar is good, working as intended

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,16 @@
     <link rel="stylesheet" href="css/normalizer.css">
     <title>API Random User Generator</title>
 </head>
-<body class="body-class">
+<body class="body-class grid">
     <header>
         <h1 class="main-title">Awesome Startup Employee Directory</h1>
     </header>
-    <main class="main-grid"></main>
+    <main class="grid-main">
+    <div id="filter-to-right">
+        <label for="directoryUser"></label>
+        <input type="search" id="directoryUser" name="directory_user">
+    </div>
+    </main>
     <script src="js/app.js"></script>
 </body>
 </html>
